discussion/kv_engine/187490/187490_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

RangeScan rejig.

Moving the connection IO to frontend.

Currently no one is setting a continue back to idle as the currentStatus
is overloaded

success means new command but should mean go again.
range_scan_more should mean continue done.

Maybe needs cookie.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-02 16:36:53.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-02 17:08:38.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22829/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ScannedData, std::mutex> scannedData;
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22829/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22829/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43846/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43846/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52273/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1499): fatal error C1021: invalid preprocessor command "warning" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52273/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24462/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24462/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1627/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1627/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12640/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12640/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12561/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12561/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24891/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24891/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25348/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25348/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26201/ : FAILURE

Failure of GoogleTest "TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp":

<pre>
[ RUN      ] TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp
[2023-03-02T17:06:47.611Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_external_auth.cc:399: Failure
[2023-03-02T17:06:47.611Z] Value of: json.contains("error") && json["error"].contains("context")
[2023-03-02T17:06:47.611Z]   Actual: false
[2023-03-02T17:06:47.611Z] Expected: true
[2023-03-02T17:06:47.611Z] {
[2023-03-02T17:06:47.611Z]   "error": {
[2023-03-02T17:06:47.611Z]     "ref": "90d5e5e1-3527-4051-b254-4eacc3bb7f7a"
[2023-03-02T17:06:47.611Z]   }
[2023-03-02T17:06:47.611Z] }
[2023-03-02T17:06:47.611Z] [  FAILED  ] TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp, where GetParam() = Mcbp (329 ms)
TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26201/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33308/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33308/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23045/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
